# aimer

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  SCROLL_OPTIMIZE.md  TEXTFIELD.md  build.rs  names.txt  output.rs  rustfmt.toml  test_router.rs  test_skia.rs
aimer/: Cargo.toml
aimer/src/: bin.rs  lib.rs
aimer_cli/: Cargo.toml  IMPROVEMENT.md  build.rs
aimer_cli/src/: bin.rs  commands.rs  config.rs  console.rs  inspector.rs  lib.rs  main.rs  targets.rs  tui.rs
aimer_cli/src/commands/: assemble.rs  assets.rs  build.rs  clean.rs  completions.rs  console.rs  create.rs  doctor.rs  migrate.rs  mod.rs  run.rs  version.rs
aimer_cli/src/console/: state.rs  ui.rs
aimer_cli/templates/: .gitignore.template  Cargo.toml.template  build.rs.template  cargo.toml.template  lib.rs.template  sample.txt
aimer_cli/templates/android/: AndroidManifest.xml.template  build.gradle.kts.template
aimer_cli/templates/ios/: Info.plist.template  info.plist.template  main.swift.template  project.pbxproj.template
aimer_cli/templates/macos/: info.plist.template  project.pbxproj.template
aimer_cli/templates/web/: index.html.template  main.ts.template  package.json.template
aimer_cupid/: AGENTS.md  Cargo.toml  SVG_RENDER.md
aimer_cupid/examples/: text_shaping_benchmark.rs
aimer_cupid/src/: bin.rs  canvas.rs  custom_pipeline.rs  draw_cmd.rs  font.rs  gpu_context.rs  lib.rs  pipeline.rs  pipeline_cache.rs  renderer.rs  utilities.rs  wasm_fonts.rs
aimer_cupid/src/pipeline/: image_pipeline.rs  rect_pipeline.rs  svg_pipeline.rs  text_pipeline.rs
aimer_cupid/src/svg/: mod.rs  tessellation.rs
aimer_cupid/src/utilities/: color.rs  mat3.rs
aimer_quiver/: Cargo.toml  build.rs
aimer_quiver/src/: adapter_detail.rs  aimer_app.rs  ffi_utils.rs  first_frame.rs  handler.rs  lib.rs  render_ctx.rs  window_attr.rs
aimer_quiver/src/ffi_utils/: android_screen.rs  ios_screen.rs  macos_surface.rs
aimer_quiver/src/handler/: event_handler.rs  user_events.rs
aimer_quiver/src/render_ctx/: h5canva.rs  wgpu_ctx.rs
crates/aimer_animation/: Cargo.toml
crates/aimer_animation/src/: animatable.rs  animated.rs  animated_builder.rs  animated_switcher.rs  controller.rs  curve.rs  group.rs  implicit_animation.rs  keyframe.rs  lib.rs  local_cell.rs  morph_transition.rs  time.rs  transition.rs  tween.rs
crates/aimer_assets/: Cargo.toml
crates/aimer_assets/src/: img_widget.rs  lib.rs
crates/aimer_canvas/: Cargo.toml
crates/aimer_canvas/src/: canvas.rs  lib.rs
crates/aimer_container/: Cargo.toml
crates/aimer_container/src/: flex.rs  grid.rs  lib.rs  scrollable.rs  single_child.rs  space.rs
crates/aimer_input/: Cargo.toml
crates/aimer_input/src/: button.rs  callback.rs  gesture.rs  input_field.rs  lib.rs  mouse_region.rs  text_button.rs
crates/aimer_inspector/: Cargo.toml
crates/aimer_inspector/src/: client.rs  lib.rs  overlay.rs  server.rs  types.rs
crates/aimer_markdown/: AGENTS.md  Cargo.toml  README.md
crates/aimer_markdown/src/: cache.rs  document.rs  lib.rs  markdown_theme.rs  renderer.rs  syntax.rs
crates/aimer_native/: Cargo.toml
crates/aimer_native/src/: lib.rs
crates/aimer_router/: AGENTS.md  Cargo.toml
crates/aimer_router/src/: lib.rs  navigator.rs  outlet.rs  router.rs  shell.rs
crates/aimer_style/: Cargo.toml
crates/aimer_style/src/: animated_theme.rs  lib.rs  style.rs  theme.rs
crates/aimer_svg/: Cargo.toml
crates/aimer_svg/src/: document.rs  error.rs  lib.rs  selector.rs  source.rs  style.rs  widget.rs
crates/aimer_text/: Cargo.toml
crates/aimer_text/src/: lib.rs  rich_text.rs  selection.rs  text.rs  text_button.rs  text_span.rs
crates/aimer_widget/: Cargo.toml
crates/aimer_widget/src/: async_builder.rs  clipboard.rs  components.rs  key.rs  layout_cache.rs  lib.rs  page_storage.rs  reconcile.rs  widget.rs
crates/animation/: Cargo.toml
crates/animation/src/: animated.rs  controller.rs  curve.rs  time.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: canvas.rs  canvas_wrapper.rs  lib.rs  mapping.rs
crates/container/: Cargo.toml
crates/container/src/: flex.rs  grid.rs  lib.rs  normal.rs  scrollable.rs  single_child.rs  space.rs
crates/control/: Cargo.toml
crates/control/src/: callback.rs  event.rs  gesture.rs  input_field.rs  lib.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: client.rs  lib.rs  overlay.rs  server.rs  types.rs
cupid/: Cargo.toml
cupid/shaders/: image.wgsl  rect.wgsl  text.wgsl
cupid/src/: bin.rs  canvas.rs  draw_cmd.rs  gpu_context.rs  lib.rs  pipeline.rs  renderer.rs  utilities.rs
cupid/src/pipeline/: glyph_atlas.rs  glyph_rasterizer.rs  image.wgsl  image_pipeline.rs  rect.wgsl  rect_pipeline.rs  text.wgsl  text_layout.rs  text_pipeline.rs
cupid/src/utilities/: color.rs  mat3.rs
engine/: Cargo.toml
engine/src/: aimer_app.rs  container.rs  ffi_utils.rs  handler.rs  inspector.rs  ios_screen.rs  lib.rs  oxidize.rs  render.rs  render_ctx.rs  utils.rs  widgets.rs  window_event.rs
engine/src/ffi_utils/: ios_screen.rs
engine/src/handler/: event_handler.rs  user_events.rs
jaime/: Aimer.toml  Cargo.toml  README.md  text.txt
jaime/assets/: JAIME.md
jaime/src/: animated.rs  animated_theme.rs  async_builder.rs  color_sync.rs  custom_animated_theme.rs  custom_font.rs  lib.rs  markdown_example.rs  panic_recovery.rs  routing.rs  scroll_and_row.rs  selectable_text.rs  stateful.rs  stateful_2.rs  svg_test.rs  test_animation.rs
oxidize/: Cargo.toml  test_winit.rs
oxidize/src/: bin.rs  exec.rs  lib.rs  main.rs
quiver/: Cargo.toml
quiver/src/: aimer_app.rs  handler.rs  lib.rs  render_ctx.rs
website/: .gitignore  Aimer.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
website/src/: api.rs  blog.rs  blog_store.rs  components.rs  get_started_button.rs  lib.rs  router.rs  same_looking.rs  screen.rs  utils.rs
website_backend/: .gitignore  Cargo.toml  Dockerfile  aimer.toml
website_backend/examples/: rubick_benchmark.rs
website_backend/src/: blog.rs  config.rs  lib.rs  main.rs
website_backend/tests/: server_config.rs
(+482 files in other folders)
