[workspace]
resolver = "3"

members = [
    ".",
    "quiver",
    "crates/widget",
    "macros/constructor",
    "macros/widget_codegen",
    "crates/container",
    "crates/color",
    "macros/widget_attr",
    "aimer",
    "crates/control",
    "crates/canvas",
    "crates/attribute",
    "crates/utils",
    "crates/animation",
    "macros/aimer_main",
    "aimer_cli",
    "crates/events",
    "crates/router",
    "crates/inspector",
    "cupid",
    "crates/media"
]


[workspace.dependencies]

canvas = {path = "crates/canvas"}
animation = { path = "crates/animation" }
control = { path = "crates/control" }
widget_codegen = { path = "macros/widget_codegen" }
container = { path = "crates/container" }
constructor = { path = "./macros/constructor" }
quiver = { path = "quiver" }
widget = { path = "crates/widget" }
widget_attr = { path = "macros/widget_attr" }
color = { path = "crates/color" }
attribute = { path = "crates/attribute" }
utils = { path = "crates/utils" }
aimer_main = { path = "macros/aimer_main" }
aimer_cli = { path = "aimer_cli" }
events = { path = "crates/events" }
router = {path = "crates/router" }
inspector = {path = "./crates/inspector"}
cupid = {path = "./cupid"}
media = {path = "./crates/media"}



#############


web-sys = { version = "0.3.91", features = ["CanvasRenderingContext2d", "DomMatrix", "TextMetrics"] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
winit = { version = "0.30.12", features = ["android-native-activity"] }
raw-window-handle = "0.6.2"
objc2 = { version = "0.6.4", default-features = false }
skia-safe = { version = "0.93.1" }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CAMetalLayer"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "NSView", "NSResponder"] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "UIResponder", "UIView"] }
softbuffer = "0.4.8"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = { version = "1.0.106" }
quote = "1.0.45"
chrono = "0.4.44"
objc = { version = "0.2.7" }
core-foundation = { version = "0.10.1" }
fxhash = "0.2.1"
parking_lot = "0.12.5"
crossbeam = "0.8.4"
colored = "3.1.1"
log = { version = "0.4.29" }
tokio = "1.45.0"
crossbeam-channel = "0.5.15"
fancy-regex = "0.17.0"
once_cell = "1.21.3"
smallvec = "1.13.2"
url = "2.5.8"
serde = {version = "1.0.228", features = ["default", "derive"]}
serde_json = "1.0.149"
jni = "0.22.4"
ndk-glue = "0.7.0"
ndk = "0.9.0"
wgpu = "29.0.0"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
image = { version = "0.25.10" }
font-kit = "0.14"
core-foundation-sys = "0.8.7"
reqwest = {version = "0.13.2",default-features = false, features = ["rustls", "http2"] }



# Aimer cli dependencies
crossterm = "0.29.0"
clap = { version = "4.5.60", features = ["derive"] }
inquire = "0.9.4"
ratatui = "0.30.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
ansi-to-tui = "8.0.1"
arboard = "3.6.1"

