[package]
name = "aimer"
version = "0.1.0"
edition = "2024"
description = "The organized export of other Aimer project"


[dependencies]
aimer_attribute.workspace = true
aimer_widget.workspace = true
aimer_color.workspace = true
aimer_container.workspace = true
aimer_quiver.workspace = true
aimer_input.workspace= true
wasm-bindgen.workspace = true
aimer_animation.workspace = true
aimer_utils.workspace = true
aimer_router.workspace = true
aimer_assets.workspace = true
aimer_style.workspace = true
aimer_text.workspace = true
aimer_macro.workspace = true

[workspace]
resolver = "3"
members = [
    ".",
    "aimer_quiver",
    "aimer_cli",
    "aimer_cupid",
    "crates/aimer_widget",
    "crates/aimer_container",
    "crates/aimer_color",
    "crates/aimer_input",
    "crates/aimer_canvas",
    "crates/aimer_attribute",
    "crates/aimer_utils",
    "crates/aimer_animation",
    "crates/aimer_events",
    "crates/aimer_router",
    "crates/aimer_inspector",
    "crates/aimer_assets",
    "crates/aimer_style",
    "crates/aimer_text",
    "crates/aimer_macro"
]


[workspace.dependencies]

aimer_canvas = {path = "crates/aimer_canvas" }
aimer_animation = { path = "crates/aimer_animation" }
aimer_input = { path = "crates/aimer_input" }
aimer_container = { path = "crates/aimer_container" }
aimer_quiver = { path = "aimer_quiver" }
aimer_widget = { path = "crates/aimer_widget" }
aimer_color = { path = "crates/aimer_color" }
aimer_attribute = { path = "crates/aimer_attribute" }
aimer_utils = { path = "crates/aimer_utils" }
aimer_cli = { path = "aimer_cli" }
aimer_events = { path = "crates/aimer_events" }
aimer_router = {path = "crates/aimer_router" }
aimer_inspector = {path = "crates/aimer_inspector" }
aimer_cupid = {path = "aimer_cupid" }
aimer_assets = {path = "crates/aimer_assets" }
aimer_style = {path = "crates/aimer_style"}
aimer_text = {path = "crates/aimer_text"}
aimer_macro = {path = "crates/aimer_macro"}


#############


web-sys = { version = "0.3.91", features = ["CanvasRenderingContext2d", "DomMatrix", "TextMetrics"] }
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
winit = { version = "0.30.12", features = ["android-native-activity"] }
raw-window-handle = "0.6.2"
objc2 = { version = "0.6.4", default-features = false }
skia-safe = { version = "0.93.1" }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-metal = { version = "0.3.2", default-features = false, features = ["MTLCommandBuffer", "MTLCommandQueue", "MTLDrawable", "MTLPixelFormat"] }
objc2-quartz-core = { version = "0.3.2", default-features = false, features = ["objc2-core-foundation", "objc2-metal", "CAMetalLayer"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "NSView", "NSResponder"] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["objc2-quartz-core", "UIResponder", "UIView"] }
softbuffer = "0.4.8"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = { version = "1.0.106" }
quote = "1.0.45"
chrono = "0.4.44"
objc = { version = "0.2.7" }
core-foundation = { version = "0.10.1" }
fxhash = "0.2.1"
parking_lot = "0.12.5"
crossbeam = "0.8.4"
colored = "3.1.1"
log = { version = "0.4.29" }
tokio = "1.45.0"
crossbeam-channel = "0.5.15"
fancy-regex = "0.17.0"
once_cell = "1.21.3"
smallvec = "1.13.2"
url = "2.5.8"
serde = {version = "1.0.228", features = ["default", "derive"]}
serde_json = "1.0.149"
jni = "0.21.1"
ndk-glue = "0.7.0"
ndk = "0.9.0"
wgpu = "29.0.0"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
image = { version = "0.25.10" }
font-kit = "0.14"
core-foundation-sys = "0.8.7"
reqwest = {version = "0.13.2",default-features = false, features = ["rustls", "native-tls", "http2"] }
openssl = { version = "0.10", features = ["vendored"] }
local-ip-address = "0.6.11"




# Aimer cli dependencies
crossterm = "0.29.0"
clap = { version = "4.5.60", features = ["derive"] }
inquire = "0.9.4"
ratatui = "0.30.0"
khronos-egl = { version = "6.0.0", features = ["dynamic"] }
ansi-to-tui = "8.0.1"
arboard = "3.6.1"

