[package]
name = "aimer"
version = "0.1.0"
edition = "2024"
description = "The organized export of other Aimer project"
repository = "https://github.com/Cottons29/aimer"
license = "MIT"
readme = "README.md"
keywords = ["gui", "rust"]
categories = ["development-tools", "gui"]


[dependencies]
aimer_attribute.workspace = true
aimer_widget.workspace = true
aimer_color.workspace = true
aimer_container.workspace = true
aimer_quiver.workspace = true
aimer_input.workspace = true
wasm-bindgen.workspace = true
aimer_animation.workspace = true
aimer_utils.workspace = true
aimer_router.workspace = true
aimer_assets.workspace = true
aimer_style.workspace = true
aimer_text.workspace = true
aimer_macro.workspace = true
aimer_provider.workspace = true
aimer_svg.workspace = true
aimer_font.workspace = true
aimer_markdown.workspace = true


[workspace]
resolver = "3"
members = [
    ".",
    "website",
    "aimer_quiver",
    "dev_tools/aimer_cli",
    "aimer_cupid",
    "crates/aimer_widget",
    "crates/aimer_container",
    "crates/aimer_color",
    "crates/aimer_input",
    "crates/aimer_canvas",
    "crates/aimer_attribute",
    "crates/aimer_utils",
    "crates/aimer_animation",
    "crates/aimer_events",
    "crates/aimer_router",
    "crates/aimer_inspector",
    "crates/aimer_assets",
    "crates/aimer_style",
    "crates/aimer_font",
    "crates/aimer_text",
    "crates/aimer_macro",
    "jaime"
    , "crates/aimer_provider", "crates/aimer_sdk", "website_backend", "crates/aimer_markdown", "crates/aimer_svg"]


[workspace.dependencies]
aimer_canvas = { path = "crates/aimer_canvas" }
aimer_animation = { path = "crates/aimer_animation" }
aimer_input = { path = "crates/aimer_input" }
aimer_container = { path = "crates/aimer_container" }
aimer_quiver = { path = "aimer_quiver" }
aimer_widget = { path = "crates/aimer_widget" }
aimer_color = { path = "crates/aimer_color" }
aimer_attribute = { path = "crates/aimer_attribute" }
aimer_utils = { path = "crates/aimer_utils" }
aimer_events = { path = "crates/aimer_events" }
aimer_router = { path = "crates/aimer_router" }
aimer_inspector = { path = "crates/aimer_inspector" }
aimer_cupid = { path = "aimer_cupid" }
aimer_assets = { path = "crates/aimer_assets" }
aimer_style = { path = "crates/aimer_style" }
aimer_font = { path = "crates/aimer_font" }
aimer_text = { path = "crates/aimer_text" }
aimer_macro = { path = "crates/aimer_macro" }
aimer_provider = { path = "crates/aimer_provider" }
aimer_svg = { path = "crates/aimer_svg" }
aimer_markdown = { path = "crates/aimer_markdown" }


#############

web-sys = { version = "0.3.103", features = ["CanvasRenderingContext2d", "Clipboard", "DomMatrix", "Navigator", "TextMetrics", "Window"] }
wasm-bindgen-futures = "0.4.76"
js-sys = "0.3.103"
wasm-bindgen = "0.2.126"
console_error_panic_hook = "0.1.7"
winit = { version = "0.30.12", features = ["android-native-activity"] }
raw-window-handle = "0.6.2"
syn = { version = "2.0.118", features = ["full"] }
proc-macro2 = { version = "1.0.106" }
quote = "1.0.46"
chrono = "0.4.45"
web-time = "1.1.0"
objc = { version = "0.2.7" }
core-foundation = { version = "0.10.1" }
fxhash = "0.2.1"
crossbeam = "0.8.4"
colored = "3.1.1"
tokio = "1.52.3"
crossbeam-channel = "0.5.16"
once_cell = "1.21.4"
smallvec = "1.13.2"
url = "2.5.8"
serde = { version = "1.0.228", features = ["default", "derive"] }
serde_json = "1.0.150"
jni = "0.22.4"
ndk-glue = "0.7.0"
ndk = "0.9.0"
ndk-context = "0.1.1"
wgpu = { version = "30.0.0", features = ["webgl"] }
pollster = "1.0.1"
bytemuck = { version = "1.25.1", features = ["derive"] }
fontdue = "0.9.3"
rustybuzz = "0.20.1"
unicode-bidi = "0.3.18"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.13.3"
image = { version = "0.25.10" }
font-kit = "0.14.3"
core-foundation-sys = "0.8.7"
reqwest = { version = "0.13.4", default-features = false, features = ["native-tls", "http2"] }
openssl = { version = "0.10.81", features = ["vendored"] }
uuid = { version = "1.23.5", features = ["js", "v4"] }
ttf-parser = "0.25.1"
dirs = "6.0.0"
markdown = "1.0.0"
webbrowser = "1.2.1"
lyon = "1.0.19"
usvg = { version = "0.47.0", default-features = false }
naga = { version = "30.0.0", features = ["wgsl-in"] }







# Aimer cli dependencies
crossterm = "0.29.0"
clap = { version = "4.6.1", features = ["derive"] }
inquire = "0.9.4"
ratatui = "0.30.2"
ansi-to-tui = "8.0.1"
arboard = "3.6.1"
clap_complete = { version = "4.6.7", features = ["unstable-dynamic"] }
notify = "9.0.0-rc.4"
anyhow = "1.0.103"
thiserror = "2.0.18"
toml = "1.1.2+spec-1.1.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tempfile = "3.27.0"
sha2 = "0.11.0"
hex = "0.4.3"
rustls-platform-verifier = { version = "0.7.0", features = ["jni"] }
bitflags = "2.13.0"

[profile.release]
opt-level = 3
debug-assertions = false
codegen-units = 1
lto = true
split-debuginfo = "packed"
panic = "abort"
strip = "symbols"
