[package]
name = "aimer"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "The organized export of other Aimer project"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "aimer"
path = "src/bin.rs"


[dependencies]
attribute.workspace = true
constructor.workspace  = true
widget.workspace = true
color.workspace = true
container.workspace = true
engine.workspace = true
control.workspace= true
aimer_main.workspace = true
wasm-bindgen.workspace = true
animation.workspace = true
utils.workspace = true
router.workspace = true
###############
[target.'cfg(target_os = "windows")'.dependencies]
aimer_cli.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
aimer_cli.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
aimer_cli.workspace = true
