[package]
name = "aimer"
version = "0.1.0"
edition = "2024"
resolver = "3"
description = "The organized export of other Aimer project"

[[bin]]
name = "aimer"
path = "src/bin.rs"


[dependencies]
attribute.workspace = true
constructor.workspace  = true
widget.workspace = true
color.workspace = true
container.workspace = true
quiver.workspace = true
control.workspace= true
aimer_main.workspace = true
wasm-bindgen.workspace = true
animation.workspace = true
utils.workspace = true
router.workspace = true
media.workspace = true
###############
[target.'cfg(any(target_os = "windows", target_os = "macos", target_os = "linux"))'.dependencies]
aimer_cli.workspace = true
