[package]
name = "aimer_cli"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "aimer"
path = "src/main.rs"

[dependencies]
aimer_inspector.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread"]}
ansi-to-tui.workspace = true
clap.workspace = true
crossterm.workspace = true
inquire.workspace = true
ratatui.workspace = true
arboard.workspace = true
colored.workspace = true
local-ip-address.workspace = true
crossbeam.workspace = true
notify = "8.2.0"

[profile.release]
opt-level = 3
debug-assertions = false
codegen-units = 1
lto = true
split-debuginfo="packed"
panic = "abort"
strip="symbols"
