[package]
name = "aimer_cli"
version = "0.1.8+4"
edition = "2024"
resolver = "3"


[[bin]]
name = "aimer"
path = "src/main.rs"

[dependencies]
aimer_inspector.workspace = true
aimer_utils.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread"]}
ansi-to-tui.workspace = true
clap.workspace = true
crossterm.workspace = true
inquire.workspace = true
ratatui.workspace = true
arboard.workspace = true
colored.workspace = true
crossbeam.workspace = true
notify.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
thiserror.workspace = true
toml.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sha2.workspace = true
hex.workspace = true
[dev-dependencies]
tempfile.workspace = true

[build-dependencies]
chrono.workspace = true
