[package]
name = "aimer_cupid"
version = "0.1.0"
edition = "2024"
description = "A rendering engine that optimized for the ui framework"

[[bin]]
path = "src/bin.rs"
name = "cupid"

[dependencies]
aimer_utils.workspace = true
aimer_color.workspace = true



#############
wgpu.workspace = true

winit.workspace = true
raw-window-handle.workspace = true
bytemuck.workspace = true
fontdue.workspace = true
ttf-parser.workspace = true
rustybuzz.workspace = true
unicode-bidi.workspace = true
unicode-linebreak.workspace = true
unicode-segmentation.workspace = true
image = {workspace = true, features = ["default"]}
chrono.workspace = true
fxhash.workspace = true
dirs.workspace = true
memmap2 = "0.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "macos", target_os = "android")))'.dependencies]
font-kit.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true



