[package]
name = "aimer_cupid"
version = "0.1.0"
edition = "2024"
description = "A rendering engine that optimized for the ui framework"

[[bin]]
path = "src/bin.rs"
name = "cupid"

[dependencies]
aimer_utils = {workspace = true, features = []}
#aimer_utils = {workspace = true, features = ["time-cost"]}
aimer_color.workspace = true
aimer_font.workspace = true



#############
wgpu.workspace = true

winit.workspace = true
bytemuck.workspace = true
fontdue.workspace = true
ttf-parser.workspace = true
rustybuzz.workspace = true
unicode-bidi.workspace = true
unicode-linebreak.workspace = true
unicode-segmentation.workspace = true
image = {workspace = true, features = ["default"]}
lyon.workspace = true
thiserror.workspace = true
fxhash.workspace = true
dirs.workspace = true
memmap2 = "0.9"
fontdb = "0.23.0"
unicode-script = "0.5.8"
swash = "0.2.7"
rayon = "1.12.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pollster.workspace = true

[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "macos", target_os = "android")))'.dependencies]
font-kit.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys.workspace = true
core-text = "22.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "Response"] }

[dev-dependencies]
naga.workspace = true



