[package]
name = "aimer_quiver"
version = "0.1.0"
edition = "2024"
resolver = "3"


[dependencies]

aimer_macro.workspace  = true
aimer_widget.workspace = true
aimer_color.workspace = true
aimer_attribute.workspace = true
aimer_utils.workspace = true
aimer_events.workspace = true
aimer_router.workspace = true
aimer_inspector.workspace = true
aimer_canvas.workspace = true
chrono.workspace = true

#################


smallvec.workspace = true
winit.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "29.0.0"
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time"]}
raw-window-handle.workspace = true
aimer_cupid.workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"



[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-glue.workspace = true
ndk.workspace = true
rustls-platform-verifier = {version = "0.6.2", features = ["jni"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "Node", "HtmlCanvasElement", "CanvasRenderingContext2d", "WebSocket", "MessageEvent", "ErrorEvent"] }