[package]
name = "aimer_quiver"
version = "0.1.0"
edition = "2024"
resolver = "3"


[dependencies]

aimer_widget.workspace = true
aimer_attribute.workspace = true
aimer_utils = {workspace = true, features = []}
aimer_events.workspace = true
aimer_inspector.workspace = true
aimer_canvas.workspace = true
wgpu.workspace = true
#################


winit = {workspace = true}
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu.workspace = true
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time"]}
raw-window-handle.workspace = true
aimer_cupid.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies.aimer_cupid]
workspace = true

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-glue.workspace = true
ndk.workspace = true
rustls-platform-verifier .workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true

console_error_panic_hook.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "Node", "HtmlCanvasElement", "Element", "CssStyleDeclaration", "WebSocket", "MessageEvent", "ErrorEvent"] }