[package]
name = "cupid"
version = "0.1.0"
edition = "2024"
description = "A rendering engine that optimized for the ui framework"

[[bin]]
path = "src/bin.rs"
name = "cupid"

[dependencies]
color = { path = "../crates/color" }
wgpu = "28.0.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
glyphon = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }