[package]
name = "cupid"
version = "0.1.0"
edition = "2024"
description = "A rendering engine that optimized for the ui framework"

[[bin]]
path = "src/bin.rs"
name = "cupid"

[dependencies]
utils.workspace = true
color = { path = "../crates/color" }
wgpu = "29.0.0"
winit = "0.30"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png"] }
chrono.workspace = true
rayon = "1.11.0"

# System font loading: font-kit on Linux/Windows (not Android — no fontconfig), Core Text FFI on macOS/iOS
[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios", target_os = "macos", target_os = "android")))'.dependencies]
font-kit = "0.14"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
core-foundation = { workspace = true }
core-foundation-sys = "0.8"