[package]
name = "engine"
version = "0.1.0"
edition = "2024"
resolver = "3"

[lib]
name = "engine"
crate-type = ["rlib", "staticlib"]


[dependencies]
constructor.workspace  = true
widget.workspace = true
color.workspace = true
attribute.workspace = true
utils.workspace = true


#################
winit.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}
pixels.workspace = true
skia-safe.workspace = true
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "Node", "HtmlCanvasElement", "CanvasRenderingContext2d"] }