[package]
name = "quiver"
version = "0.1.0"
edition = "2024"
resolver = "3"


[dependencies]

constructor.workspace  = true
widget.workspace = true
color.workspace = true
attribute.workspace = true
utils.workspace = true
events.workspace = true
router.workspace = true
inspector.workspace = true
canvas.workspace = true

#################


smallvec.workspace = true
winit.workspace = true
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = "29.0.0"
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros", "net", "sync", "time"]}
raw-window-handle.workspace = true

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.cupid]
path = "../cupid"

[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
ndk-glue.workspace = true
ndk.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Window", "Document", "HtmlElement", "Node", "HtmlCanvasElement", "CanvasRenderingContext2d", "WebSocket", "MessageEvent", "ErrorEvent"] }