[package]
name = "website"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
[dependencies]
aimer = {path = ".."}
webbrowser = "1.2.1"

[profile.dev]
debug = true

[profile.release]
opt-level = 'z'       # Default: maximum optimizations for speed
lto = true          # Enable Link-Time Optimization for smaller, faster binaries
strip = "symbols"   # Strip binary symbols to reduce file size further
codegen-units = 1   # Optimize for maximum binary size reduction over compile time
overflow-checks = false
debug-assertions = false