[package]
name = "website_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.7.0", features = ["cors"] }


[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
