[package]
name = "website_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt-multi-thread"] }
toml.workspace = true
tower-http = { version = "0.7.0", features = ["cors"] }


[dev-dependencies]
aimer_rubick.workspace = true
tempfile.workspace = true
tower.workspace = true


[profile.release]
opt-level = 3        # 0-3, "s" (size), "z" (min size) — 3 is default for release
lto = true            # Link-time optimization: "fat", "thin", or true/false
codegen-units = 1     # Fewer units = better optimization, slower compile
panic = "abort"       # Smaller binary, no unwinding (can't catch_unwind)
strip = true          # Strip symbols/debug info from binary
debug = false         # No debug info (default false in release)
overflow-checks = false  # Default false in release
incremental = false   # Default false in release