[package]
name = "aimer_animation"
version = "0.1.0"
edition = "2024"


[dependencies]
aimer_widget.workspace = true
aimer_attribute.workspace = true
aimer_color.workspace = true
aimer_macro.workspace = true
aimer_utils.workspace = true
aimer_events.workspace = true
aimer_canvas.workspace = true

########################

winit.workspace = true
chrono.workspace = true
