[package]
name = "aimer_animation"
version = "0.1.0"
edition = "2024"


[dependencies]
aimer_widget.workspace = true
aimer_attribute.workspace = true
aimer_events.workspace = true
aimer_canvas.workspace = true
aimer_utils.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
