[package]
name = "aimer_container"
version = "0.1.0"
edition = "2024"


[dependencies]
aimer_widget.workspace = true
aimer_attribute.workspace = true
aimer_macro.workspace = true
aimer_events.workspace = true
aimer_style.workspace = true
#################

aimer_utils.workspace = true
web-time.workspace = true
uuid.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
objc.workspace = true
tokio = {workspace = true, features = ["rt-multi-thread", "macros"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
