[package]
name = "aimer_markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
aimer_utils.workspace = true
aimer_widget.workspace = true
aimer_text.workspace = true
aimer_container.workspace = true
markdown.workspace = true
aimer_assets.workspace = true
aimer_color.workspace = true
aimer_style.workspace = true
webbrowser.workspace = true
aimer_svg.workspace = true
arborium = { workspace = true, features = ["default", "lang-python", "lang-rust", "lang-toml"] }

[dev-dependencies]
aimer_attribute.workspace = true
aimer_canvas.workspace = true
tokio.workspace = true
winit.workspace = true
